--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "jwt-simple": "^0.5.6",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
